public/bs-templates/templates/modal/_export.scss
.export {
  &-container {
    display: flex;
    align-items: center;
  }

  &-form {
    width: 100%;
    color: black;
    position: relative;
    margin-bottom: 15px;
  }

  &-title {
    &-big {
      font-size: 3rem;
    }
    &-md {
      font-size: 2rem;
      margin-top: 0;
    }
    &.export-title-md {
      margin-top: 15px;
    }
  }

  &-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &-close {
    margin-left: 100%;
    position: sticky;
    display: inline-block;
    background: none;
    border: none;
    color: #4f4f4f;
    transform: translateY(10px);
    padding: 0;
    right: 0;
    top: -0.5rem;
    vertical-align: middle;
    cursor: pointer;
    z-index: 1;

    &:hover {
      color: black;
    }
  }

  #event &-close {
    right: 1rem;
    top: -0.5rem;
  }

  &-btn {
    margin-bottom: 20px;
  }

  &-link {
    margin-bottom: 10px;
  }

  .flex-container {
    display: flex;
    align-items: center;

    .checkbox {
      margin: 0 15px;
    }

    .btn {
      height: 34px;
    }
  }

  a {
    color: $oa-blue;

    &:hover {
      cursor: pointer;
      text-decoration: underline;
      color: darken($oa-blue, 10%);
    }
  }

  label, input[type="checkbox"] {
    font-weight: normal;
  }
 
  .checkbox-list {
    column-count: 2;
  
    input[type="checkbox"] {
      margin: 4px 2px;
    }
  }
  
  .checkbox-list label {
    margin-bottom: 5px;
    display: block;
  }

  .checkbox-container {
    margin-top: 10px;
  }

  .spreadsheet-options {
    margin-left: 24px;
    margin-bottom: 5px;
  }
}

.form-group > .input-group > .form-control.export {
  &-input,
  &-textarea {
    border-radius: 5px;
    resize: vertical;
    max-width: 95%;
  }
}

.input-icon-right {
  position: relative;
  max-width: 95%;

  & > button {
    position: absolute;
    top: 0;
    right: 0;
    height: 100%;
    background-color: transparent;
  }
}

.input-container {
  max-width: 50%;
  margin-bottom: 10px;
}

.form-control:read-only.url-input {
  background-color: $oa-white;
}

/**** style overwrites ****/
.agenda-header h1.export-title {
  &-big {
    margin-top: 10px;
    font-size: 3rem;
    margin-bottom: 0;
    padding: 0;
    transform: translateY(-20px);
  }
}

.agenda-header .ctas .btn.export-btn {
  margin-bottom: 20px;
  color: $oa-white;
}

.aggregator-input.input-icon-right {
  max-width: 100%;
}

#event h1.export-title-big {
  margin-top: 20px;
  margin-bottom: 0;
  padding: 0;
  transform: translateY(-20px);
}

.share-button {
  display: inline;

  & > button {
    padding: 0px;
    color: gray;
  }
}

.aggregate {
  &-logo {
    height: 16px;
    width: 16px;
  }

  &-button {
    max-height: 34px;
  }
}


.calendars {
  &-options {
    margin-left: 3rem;
  }
  &-list {
    padding: 0;
  }

  &-date {
    list-style-type: none;

    & > a {
      color: $oa-gray;

      &:hover {
        color: $oa-blue;
      }
    }
  }
}

a.calendars-link {
  color: $oa-blue;
}

.btn.btn-default.btn-calendar {
  background: $oa-gray-lightest;
  border-color: transparent;
  color: $oa-gray;
  display: inline-block;
  margin: 3px;

  &:hover {
    background: $oa-blue;
    color: $oa-white;
  }
}

#event .detail-item p.confirmation-message {
  margin: 0 0 20px 0;
}

